--- a/index.html
+++ b/index.html
@@ -627,5 +627,13 @@
             });
         });
     </script>
+
+    <footer style="text-align: center; padding: 20px;">
+  <a href="/privacy.html" target="_blank" style="color: #666; text-decoration: underline;">
+    Privacy Policy
+  </a>
+</footer>
+</body>
+
 </body>
 </html>
