--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuickType - Multilingual Typing Test</title>
 
+    <meta name="description" content="QuickType - The fastest and easiest multilingual typing test platform. Practice typing in English, Hindi, Marathi, and more. No login needed. Just type and improve your speed!">
+<meta name="keywords" content="typing test, typing speed, hindi typing, english typing, marathi typing, typing practice, 10 minute typing test, free typing test, quick type">
+<meta name="author" content="QuickType Team">
+<meta name="robots" content="index, follow">
+<meta property="og:title" content="QuickType - Multilingual Typing Test">
+<meta property="og:description" content="Test and improve your typing speed in English, Hindi, Marathi & more. No account needed.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://quick-typo.vercel.app">
+<meta property="og:image" content="https://quick-typo.vercel.app/typing-preview.png">
+
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1185420229893725"
      crossorigin="anonymous"></script>
     
