--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QuickType - Multilingual Typing Test</title>
+    <title>QuickType - Free Typing Test in English, Hindi, Marathi & More</title>
+    <meta name="description" content="Take free typing tests in English, Hindi, Marathi, Spanish, and French. Choose 1, 5, or 10-minute tests to improve speed. No login needed – just type and track your performance!">
 
     <meta name="description" content="QuickType - The fastest and easiest multilingual typing test platform. Practice typing in English, Hindi, Marathi, and more. No login needed. Just type and improve your speed!">
 <meta name="keywords" content="typing test, typing speed, hindi typing, english typing, marathi typing, typing practice, 10 minute typing test, free typing test, quick type">
